# zephyr_usb_host_hid_keyboard

./: CMakeLists.txt  Kconfig  README.md  prj.conf
components/: CMakeLists.txt
components/lists/: CMakeLists.txt
components/osa/: CMakeLists.txt
src/: host_keyboard.c  host_keyboard.h  main.c  usb_host_config.h
usb/: CMakeLists.txt
usb/device/: CMakeLists.txt  usb_dc_mcux.c
usb/host/: CMakeLists.txt  usb_host.h  usb_host_devices.c  usb_host_ehci.c  usb_host_ehci.h  usb_host_framework.c  usb_host_hci.c
usb/host/class/: CMakeLists.txt  usb_host_hid.c  usb_host_hub.c  usb_host_hub_app.c
usb/phy/: CMakeLists.txt
